--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
     "clsx": "2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/cors": "^2.8.17",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
