--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "2.1.1",
     "cors": "^2.8.5",
     "framer-motion": "11.13.1",
+    "html2canvas": "^1.4.1",
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
