--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@heroui/alert": "^2.2.10",
     "@heroui/button": "2.2.9",
     "@heroui/card": "^2.2.10",
     "@heroui/code": "2.2.6",
