--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroui/alert": "^2.2.10",
+    "@heroui/avatar": "^2.2.7",
     "@heroui/button": "2.2.9",
     "@heroui/card": "^2.2.10",
+    "@heroui/chip": "^2.2.7",
     "@heroui/code": "2.2.6",
     "@heroui/divider": "^2.2.6",
     "@heroui/input": "2.4.9",
@@ -22,6 +24,7 @@
     "@heroui/snippet": "2.2.10",
     "@heroui/switch": "2.2.8",
     "@heroui/system": "2.4.6",
+    "@heroui/tabs": "^2.2.8",
     "@heroui/theme": "2.4.5",
     "@react-aria/visually-hidden": "3.8.18",
     "@solana/web3.js": "^1.98.0",
